# Robetarme_iiwa

./: .gitignore  .gitmodules  Dockerfile  GetRepo.sh  README.md  Read_me  example.csv  setup_dependencies.sh  start_docker.sh
devel/: .catkin
devel/include/gazebo_plugins/: HokuyoConfig.h
devel/include/my_robot_msgs/: MoveUntilAction.h  MoveUntilActionFeedback.h  MoveUntilActionGoal.h  MoveUntilActionResult.h  MoveUntilFeedback.h  MoveUntilGoal.h  MoveUntilResult.h
devel/include/send_pos/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h  Num.h
devel/lib/gazebo_plugins/: camera_synchronizer  hokuyo_node  pub_joint_trajectory_test
devel/lib/iiwa_driver/: iiwa_driver
devel/lib/iiwa_tools/: iiwa_service
devel/lib/pkgconfig/: gazebo_dev.pc  gazebo_msgs.pc  gazebo_plugins.pc  gazebo_ros.pc  gazebo_ros_control.pc  iiwa_control.pc  iiwa_description.pc  iiwa_driver.pc  iiwa_gazebo.pc  iiwa_moveit.pc  iiwa_tools.pc  my_robot_msgs.pc  send_pos.pc  trac_ik_examples.pc  trac_ik_kinematics_plugin.pc  trac_ik_lib.pc  trac_ik_python.pc
devel/lib/send_pos/: Ds  Send_pos  listener  talker
devel/lib/trac_ik_examples/: ik_tests
docker/: Dockerfile  build_docker.sh  start_docker.sh
docker_kinetic/: Dockerfile  start_docker.sh
docker_ur5/: .Dockerfile.swp  Dockerfile  build_docker.sh  start_docker.sh
install/: .rosinstall  _setup_util.py
install/include/gazebo_plugins/: CameraSynchronizerConfig.h
install/lib/gazebo_plugins/: camera_synchronizer  hokuyo_node  pub_joint_trajectory_test
install/lib/iiwa_driver/: iiwa_driver
install/lib/iiwa_tools/: iiwa_service
install/lib/pkgconfig/: gazebo_msgs.pc  gazebo_plugins.pc  gazebo_ros_control.pc  iiwa_driver.pc  iiwa_gazebo.pc  send_pos.pc
install/share/iiwa_tools/: package.xml
install/share/send_pos/: package.xml
src/cobod_arm/: CMakeLists.txt  package.xml
src/cobod_arm/config/: joint_names_cobod_arm.yaml
src/cobod_arm/launch/: gazebo.launch  rviz.launch  rviz_lasa.launch
src/cobod_arm/meshes/: Gripper_base.STL  Link_6.STL
src/cobod_arm/rviz/: config_file.rviz
src/cobod_arm/urdf/: cobod_arm.urdf
src/cobod_arm_study/: CMakeLists.txt  package.xml
src/cobod_arm_study/config/: joint_names_cobod_arm_6dof.yaml  (+2 more)
src/controller_iiwa/: CMakeLists.txt  package.xml
src/controller_ur5/: CMakeLists.txt  README  package.xml
src/metal_additive_manufacturing/: .clang-format  CMakeLists.txt  package.xml
src/metal_additive_manufacturing/data/: test_data.stl
src/metal_additive_manufacturing/include/: log.hpp  maplanner.h  maplanner.hpp  maplanner_class.hpp  maplanner_sml.hpp  waypoints_extraction.hpp
src/metal_additive_manufacturing/include/boost/: sml.hpp
src/metal_additive_manufacturing/launch/: maplanner.launch  maplanner_class.launch  maplanner_sml.launch  wp_extraction.launch
src/metal_additive_manufacturing/libs/: stl_reader.h
src/metal_additive_manufacturing/src/: maplanner.cpp  maplanner_class.cpp  maplanner_sml.cpp  waypoints_extraction.cpp
src/metal_additive_manufacturing/tests/: test_maplanner.cpp
src/my_robot_msgs/: CMakeLists.txt  package.xml
src/path_planning/: CMakeLists.txt  README.md  package.xml  requirements.txt
src/send_pos/: CMakeLists.txt  Read_me  package.xml
src/simulation_tool/: ds_sim_pos.py  ds_sim_torque.py  ds_simulation.py  ds_test_pos.ttt  ds_trial.ttt  ds_trial_pos.ttt  ds_trial_pos_laser_no_script.ttt  ds_trial_pos_no_script.ttt  ds_trial_torque.ttt  first_trial.ttt  metal_additive_mk1.ttt  paint_scene_mk1.ttt  paint_scene_mk2.ttt  surface_finishing_mk1.ttt  surface_finishing_mk2.ttt  test_tristan.ttt
(+335 files in other folders)
